openshift/network-policy/deployment/one/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: one
  namespace: left
  labels:
    app: one
    app.kubernetes.io/component: one
    app.kubernetes.io/instance: one
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: one
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: one
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: one
          image: >-
            quay.io/marrober/layers:28
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
