openshift/network-policy/deployment/one/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: one
  namespace: left
  labels:
    app: one
    app.kubernetes.io/component: one
    app.kubernetes.io/instance: one
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: one
